--- a/src/main/resources/templates/edit-list.html
+++ b/src/main/resources/templates/edit-list.html
@@ -144,8 +144,8 @@
                         <input name="date" th:value="${mailList.dispatchDate}" id="dateInput" required class="form-control" type="date">
                     </div>
                     <div class="mb-3">
-                        <label class="form-label" for="interval">Interval (ms)</label>
-                        <input name="interval" id="interval" th:value="${mailList.intervalPeriod}" required class="form-control" type="number">
+                        <label class="form-label" for="interval">Interval (s)</label>
+                        <input name="interval" id="interval" th:value="${mailList.intervalPeriod}" required class="form-control" type="text">
                     </div>
                     <div class="mb-3 d-flex flex-wrap">
                         <label class="form-label me-3" for="variable">Tillgängliga variabler:</label>
@@ -164,21 +164,23 @@
                     <div class="row">
                         <div class="col-xl-6">
                             <label>Huvud innehåll</label>
-                            <div th:utext="${mailList.mainContent}" contenteditable="true" type="text/html; charset=utf-8" oninput="mirrorText(this)" required name="mainContent" class="w-100 form-control content" cols="30" rows="10"></div>
+                            <div th:utext="${mailList.mainContent}" contenteditable="true" type="text/html; charset=utf-8" oninput="mirrorText(this)" name="mainContentHolder" required class="w-100 form-control content" cols="30" rows="10"></div>
                         </div>
                         <div class="col-xl-6">
                             <label></label>
                             <div class="w-100"></div>
+                            <textarea name="mainContent" style="display: none" cols="30" rows="10"></textarea>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-xl-6">
                             <label>Footer innehåll</label>
-                            <textarea th:utext="${mailList.footerContent}" contenteditable="true" type="text/html; charset=utf-8" oninput="mirrorText(this)" name="footerContent" class="w-100 form-control content" cols="30" rows="10"></textarea>
+                            <div th:utext="${mailList.footerContent}" contenteditable="true" type="text/html; charset=utf-8" name="footerContentHolder" oninput="mirrorText(this)" class="w-100 form-control content" cols="30" rows="10"></div>
                         </div>
                         <div class="col-xl-6">
                             <label></label>
                             <div class="w-100"></div>
+                            <textarea name="footerContent" style="display: none" cols="30" rows="10"></textarea>
                         </div>
                     </div>
                     <!--This is to add a sequence placeholder-->
@@ -196,10 +198,11 @@
                         </div>
                         <div class="row">
                             <div class="col-xl-6">
-                                <div th:utext="${sequence.mainContent}" contenteditable="true" type="text/html; charset=utf-8" oninput="mirrorTextSequence(this)" required name="sequenceContent[]" class="w-100 form-control content" cols="30" rows="10"></div>
+                                <div th:utext="${sequence.mainContent}" contenteditable="true" type="text/html; charset=utf-8" name="sequenceContentHolder[]" oninput="mirrorTextSequence(this)" required class="w-100 form-control content" cols="30" rows="10"></div>
                             </div>
                             <div class="col-xl-6">
                                 <div class="w-100"></div>
+                                <textarea name="sequenceContent[]" style="display: none" cols="30" rows="10"></textarea>
                             </div>
                         </div>
                         <div class="row">
@@ -233,10 +236,11 @@
         </div>
         <div class="row">
             <div class="col-xl-6">
-                <div oninput="mirrorTextSequence(this)" contenteditable="true" type="text/html; charset=utf-8" required name="sequenceContent[]" class="w-100 form-control content" cols="30" rows="10"></div>
+                <div oninput="mirrorTextSequence(this)" contenteditable="true" type="text/html; charset=utf-8" required name="sequenceContentHolder[]" class="w-100 form-control content" cols="30" rows="10"></div>
             </div>
             <div class="col-xl-6">
                 <div class="w-100"></div>
+                <textarea name="sequenceContent[]" style="display: none" cols="30" rows="10"></textarea>
             </div>
         </div>
         <div class="row">
@@ -264,12 +268,12 @@
     });
 
     document.addEventListener('DOMContentLoaded', (event) => {
-        const inputElements = document.querySelectorAll('textarea[name="footerContent"]');
+        const inputElements = document.querySelectorAll('div[name="footerContentHolder"]');
         inputElements.forEach(mirrorText);
     });
 
     document.addEventListener('DOMContentLoaded', (event) => {
-        const textareaElements = document.querySelectorAll('textarea[name="mainContent"]');
+        const textareaElements = document.querySelectorAll('div[name="mainContentHolder"]');
         textareaElements.forEach(mirrorText);
     });
 
@@ -279,7 +283,7 @@
     });
 
     document.addEventListener('DOMContentLoaded', (event) => {
-        const textareaElements = document.querySelectorAll('textarea[name="sequenceContent[]"]');
+        const textareaElements = document.querySelectorAll('div[name="sequenceContentHolder[]"]');
         textareaElements.forEach(mirrorTextSequence);
     });
 </script>
@@ -308,6 +312,7 @@
         if(sibling.tagName == "DIV"){
             //let htmlText = text.replace(/\n/g, '<br>'); // Replace newline characters with <br> tags
             sibling.innerHTML = text;
+            sibling.nextElementSibling.textContent = text;
         }
         else{
             sibling.value = text;
@@ -328,6 +333,7 @@
         if(sibling.tagName == "DIV"){
             //let htmlText = text.replace(/\n/g, '<br>'); // Replace newline characters with <br> tags
             sibling.innerHTML = text;
+            sibling.nextElementSibling.textContent = text;
         }
         else{
             sibling.value = text;
