--- a/src/main/resources/templates/list-content.html
+++ b/src/main/resources/templates/list-content.html
@@ -217,8 +217,8 @@
         </div>
         <div class="row">
             <div class="col-md-6 mb-3">
-                <label>Sekvens startdatum (utan svar från första utskick)</label>
-                <input name="sequenceAfter[]" required class="form-control" type="date">
+                <label>Sekvens efter dagar utan svar (från föregående utskick)</label>
+                <input name="sequenceAfter[]" required class="form-control" type="number">
             </div>
             <div class="col-md-6 mb-3 d-flex align-items-end">
                 <button class="btn btn-danger btn-sm mt-4" onclick="removeSequence(this)">Ta bort sekvens</button>
@@ -260,7 +260,7 @@
         if(sibling.tagName == "DIV"){
             text = e.innerHTML
         }
-
+        let textBeforeReplaced = text
         for(let i = 0; i<headers.length;i++){
             var pattern = "{" + headers[i].name + "}";
             var regex = new RegExp(pattern, 'g');
@@ -269,7 +269,7 @@
         if(sibling.tagName == "DIV"){
             //let htmlText = text.replace(/\n/g, '<br>'); // Replace newline characters with <br> tags
             sibling.innerHTML = text;
-            sibling.nextElementSibling.textContent = text;
+            sibling.nextElementSibling.textContent = textBeforeReplaced;
         }
         else{
             sibling.value = text;
@@ -281,7 +281,7 @@
         if(sibling.tagName == "DIV"){
             text = e.innerHTML
         }
-
+        let textBeforeReplaced = text
         for(let i = 0; i<headers.length;i++){
             var pattern = "{" + headers[i].name + "}";
             var regex = new RegExp(pattern, 'g');
@@ -290,7 +290,7 @@
         if(sibling.tagName == "DIV"){
             //let htmlText = text.replace(/\n/g, '<br>'); // Replace newline characters with <br> tags
             sibling.innerHTML = text;
-            sibling.nextElementSibling.textContent = text;
+            sibling.nextElementSibling.textContent = textBeforeReplaced;
         }
         else{
             sibling.value = text;
