--- a/src/main/resources/templates/edit-list.html
+++ b/src/main/resources/templates/edit-list.html
@@ -248,7 +248,7 @@
         <div class="row">
             <div class="col-md-6 mb-3">
                 <label>Sekvens startdatum (utan svar från första utskick)</label>
-                <input name="sequenceAfter[]" required class="form-control" type="date">
+                <input name="sequenceAfter[]" required class="form-control" type="number">
             </div>
             <div class="col-md-6 mb-3 d-flex align-items-end">
                 <button class="btn btn-danger btn-sm mt-4" onclick="removeSequence(this)">Ta bort sekvens</button>
