--- a/src/main/resources/templates/list-data.html
+++ b/src/main/resources/templates/list-data.html
@@ -68,26 +68,27 @@
     <div class="w-100">
         <div class="px-lg-4 px-sm-3 px-2 py-lg-5 py-sm-4 py-3">
             <div class="tableSearch">
+                <input type="text" th:value="${id}" id="listId" style="display: none">
                 <table class="table fs-sm">
                     <thead>
                     <tr class="d-none d-lg-table-row">
                         <th>Email</th>
                         <th>Skickat</th>
                         <th>Öppnat</th>
-                        <th>Ta bort</th>
+                        <th class="d-flex justify-content-center gap-1 pe-2">Ta bort</th>
                     </tr>
                     </thead>
                     <tbody>
                     <tr th:each="list : ${lists}">
-                        <td class="d-none d-lg-table-cell">
+                        <td class="d-lg-table-cell">
                                     <span class="badge shadow-sm border bg-secondary text-body">
                                         <span th:text="${list.email}">johannes.eriksson@gmail.com</span>
                                     </span>
                         </td>
-                        <td class="pe-1">
+                        <td class="justify-content-center gap-1 pe-2">
                             <i th:if="${list.sentDate != null}" data-bs-toggle="tooltip" data-bs-placement="top" th:title="'Utskicket skickades ' + ${list.sentDate}" class="bx bxs-check-circle fs-lg text-success me-1"></i>
                         </td>
-                        <td class="pe-1">
+                        <td class="justify-content-center gap-1 pe-2">
                             <i th:if="${list.timeOpened != null}" data-bs-toggle="tooltip" data-bs-placement="top" th:title="'Utskicket öppnades ' + ${list.timeOpened}" class="bx bxs-check-circle fs-lg text-success me-1"></i>
                         </td>
                         <td class="px-0" style="max-width: fit-content !important;">
@@ -110,10 +111,10 @@
                             </a>
                         </li>
                         <li class="page-item">
-                            <a style="cursor: pointer" th:if="${page>2}" th:onclick="searchResults([[${page-2}]])" th:text="${page-2}" class="page-link shadow-sm border">1</a>
+                            <a style="cursor: pointer" th:if="${page>1}" th:onclick="searchResults([[${page-2}]])" th:text="${page-1}" class="page-link shadow-sm border">1</a>
                         </li>
                         <li class="page-item">
-                            <a style="cursor: pointer" th:if="${page>1}" th:onclick="searchResults([[${page-1}]])" th:text="${page-1}" class="page-link shadow-sm border">2</a>
+                            <a style="cursor: pointer" th:if="${page>0}" th:onclick="searchResults([[${page-1}]])" th:text="${page}" class="page-link shadow-sm border">2</a>
                         </li>
                         <li class="page-item active" aria-current="page">
                     <span class="page-link bg-info shadow-info" th:text="${page+1}">
@@ -131,21 +132,6 @@
                             <a th:if="${page+3<totalHits-1}" th:onclick="searchResults([[${page+3}]])" th:text="${page+4}" style="cursor: pointer" class="page-link shadow-sm border">5</a>
                         </li>
                         <li class="page-item">
-                            <a th:if="${page+4<totalHits-1}" th:onclick="searchResults([[${page+4}]])" th:text="${page+5}" style="cursor: pointer" class="page-link shadow-sm border">5</a>
-                        </li>
-                        <li class="page-item">
-                            <a th:if="${page+5<totalHits-1}" th:onclick="searchResults([[${page+5}]])" th:text="${page+6}" style="cursor: pointer" class="page-link shadow-sm border">5</a>
-                        </li>
-                        <li class="page-item">
-                            <a th:if="${page+6<totalHits-1}" th:onclick="searchResults([[${page+6}]])" th:text="${page+7}" style="cursor: pointer" class="page-link shadow-sm border">5</a>
-                        </li>
-                        <li class="page-item">
-                            <a th:if="${page+7<totalHits-1}" th:onclick="searchResults([[${page+7}]])" th:text="${page+8}" style="cursor: pointer" class="page-link shadow-sm border">5</a>
-                        </li>
-                        <li class="page-item">
-                            <a th:if="${page+8<totalHits-1}" th:onclick="searchResults([[${page+8}]])" th:text="${page+9}" style="cursor: pointer" class="page-link shadow-sm border">5</a>
-                        </li>
-                        <li class="page-item">
                             <a th:if="${page+1<totalHits}" th:onclick="searchResults([[${page+1}]])" style="cursor: pointer" class="page-link shadow-sm border">
                                 <i class="bx bx-chevron-right mx-n1"></i>
                             </a>
@@ -156,66 +142,28 @@
         </div>
     </div>
 </div>
-<script src="https://code.jquery.com/jquery-3.6.0.js"></script>
-<script src="https://code.jquery.com/ui/1.13.1/jquery-ui.js"></script>
 <!-- Scripts -->
 <script src="/vendor/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+
 <script src="/js/theme.min.js"></script>
 <script src="/js/main.js"></script>
+
+<script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+<script src="https://code.jquery.com/ui/1.13.1/jquery-ui.js"></script>
+
 <script>
-    var date = new Date();
-    var day = String(date.getDate()).padStart(2, '0');
-    var month = String(date.getMonth() + 1).padStart(2, '0'); //January is 0!
-    var year = date.getFullYear();
-
-    var today = year + '-' + month + '-' + day;
-
-    document.getElementById('reinstateDateInput').value = today;
-
-    $('#removeListModal').on('show.bs.modal', function(e) {
-
-        let id = $(e.relatedTarget).data('listid');
-        let name = $(e.relatedTarget).data('listname');
-        document.getElementById("removeNameText").textContent = "Ta bort '" + name + "'?"
-        document.getElementById("listId").value = id
-
-    });
-
-    $('#reinstateListModal').on('show.bs.modal', function(e) {
-
-        let id = $(e.relatedTarget).data('listid');
-        let name = $(e.relatedTarget).data('listname');
-        document.getElementById("reinstateNameText").textContent = "Återställ '" + name + "' för att planera ett nytt utskick?"
-        document.getElementById("reinstateListId").value = id
-
-    });
+    function searchResults(page){
+        $.get("/user/search-list-row",
+            {"page": page, "id": document.getElementById("listId").value}).done(function (fragment) {
+            $(".tableSearch").replaceWith(fragment);
+        })
+    }
 </script>
 <script>
     var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'))
     var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
         return new bootstrap.Tooltip(tooltipTriggerEl)
     })
-</script>
-<script>
-    document.getElementById('file').addEventListener('change', function(e) {
-        var fileNameByInput = e.target.files[0].name;
-        var fileName = document.getElementById("name").value
-        if(fileName.length==0){
-            document.getElementById("name").value = fileNameByInput
-        }
-    });
-</script>
-<script th:if="${uploaded==true}">
-    alert("Lista uppladdad")
-</script>
-<script th:if="${sentTest==true}">
-    alert("Ett test mejl har sickats till inloggad epostadress")
-</script>
-<script th:if="${sentTest==false}">
-    alert("Det gick inte att skicka ett test mejl. Antigen är eposten felaktig eller så är dina epost uppgifter fel.")
-</script>
-<script th:if="${hasError==false}">
-    alert("settings updated")
 </script>
 </body>
 </html>
