--- a/src/main/resources/templates/queued-list.html
+++ b/src/main/resources/templates/queued-list.html
@@ -226,8 +226,8 @@
                                     <i class="bx bx-x p-1" style="font-size: 0.9rem " th:data-listid="${queuedList.id}" th:data-listname="${queuedList.fileName}" data-bs-toggle="modal" data-bs-target="#removeListModal"></i>
                                 </button>
                                 <div class="border-start d-lg-none"></div>
-                                <button class="btn btn-sm btn-light border p-0 shadow-sm" data-bs-toggle="tooltip" data-bs-placement="top" title="Skicka ett test mejl till mig själv">
-                                    <a th:href="'/user/lista-rader/' + ${queuedList.id} + '?page=0'"><i class="bx bxs-envelope p-1" style="font-size: 0.9rem" th:data-listid="${queuedList.id}"></i></a>
+                                <button class="btn btn-sm btn-light border p-0 shadow-sm" data-bs-toggle="tooltip" data-bs-placement="top" title="Öppna lista">
+                                    <a th:href="'/user/lista-rader/' + ${queuedList.id} + '?page=0'"><i class="bx bx-folder p-1" style="font-size: 0.9rem" th:data-listid="${queuedList.id}"></i></a>
                                 </button>
                             </div>
                         </td>
