--- a/src/main/resources/templates/list-data.html
+++ b/src/main/resources/templates/list-data.html
@@ -89,7 +89,7 @@
                             <i th:if="${list.sentDate != null}" data-bs-toggle="tooltip" data-bs-placement="top" th:title="'Utskicket skickades ' + ${list.sentDate}" class="bx bxs-check-circle fs-lg text-success me-1"></i>
                         </td>
                         <td class="justify-content-center gap-1 pe-2">
-                            <i th:if="${list.timeOpened != null}" data-bs-toggle="tooltip" data-bs-placement="top" th:title="'Utskicket öppnades ' + ${list.timeOpened}" class="bx bxs-check-circle fs-lg text-success me-1"></i>
+                            <i th:if="${list.timeOpened != null}" data-bs-toggle="tooltip" data-bs-placement="top" th:title="'Utskicket öppnades ' + ${list.timeOpened}" class="bx bx-search-alt fs-lg text-success me-1"></i>
                         </td>
                         <td class="px-0" style="max-width: fit-content !important;">
                             <div class="d-flex justify-content-center gap-1 pe-2">
